# fixed-floating-numbers

./: CMakeLists.txt  README.md  REPORT.md  main.cpp
src/: CMakeLists.txt
src/FixedPoint/: CMakeLIsts.txt  FixedPoint.cpp  FixedPoint.hpp
src/FloatingPoint/: CMakeLists.txt  FloatingPoint.cpp  FloatingPoint.hpp
src/ParseArgs/: CMakeLists.txt  ParseArgs.cpp  ParseArgs.hpp
